Добавил мапперы,подправил названия сущностей следуя openapi.yaml
